<resources>

    <string name="about_frogobox">Frogobox Software Industry</string>
    <string name="dummy">Frogobox Software Industry</string>

    <string name="text_name">Muhammad Faisal Amir</string>
    <string name="text_job">Android Programmer</string>
    <string name="text_link_linkedin">linkedin.com/in/faisalamircs</string>
    <string name="text_link_github">github.com/amirisback</string>
    <string name="text_link_medium">medium.com/@faisalamircs</string>
    <string name="text_link_dribbble">dribbble.com/faisalamircs</string>
    <string name="text_link_facebook">facebook.com/faisalamircs</string>
    <string name="text_link_twitter">twitter.com/faisalamircs</string>
    <string name="text_link_playstore">FrogoBox</string>
    <string name="text_link_instagram">instagram.com/faisalamircs</string>

    <string name="text_linkedin">Linkedin</string>
    <string name="text_github">Github</string>
    <string name="text_dribbble">Dribbble</string>
    <string name="text_medium">Medium</string>

    <string name="text_edu_high_school_level">High School</string>
    <string name="text_edu_high_school_institute">SMAN 1 Probolinggo</string>
    <string name="text_edu_high_school_year">2013 - 2016</string>

    <string name="text_edu_diploma_level">Diploma</string>
    <string name="text_edu_diploma_institute">Telkom University</string>
    <string name="text_edu_diploma_major">Informatic Engineering</string>
    <string name="text_edu_diploma_year">2016 - 2019</string>

    <string name="product_name_cat">Cat App</string>
    <string name="product_name_finpro">Finpro Management</string>
    <string name="product_name_football">Football App</string>
    <string name="product_name_frogonews">FrogoNews App</string>
    <string name="product_name_jagosholat">Jago Sholat</string>
    <string name="product_name_jami">Jami</string>
    <string name="product_name_mood">Mood</string>
    <string name="product_name_movie">Movie App</string>
    <string name="product_name_romis">Romis</string>
    <string name="product_name_shejek">Shejek</string>

    <string name="product_name_ayo_menghitung">Ayo Menghitung</string>
    <string name="product_name_mvvm">Catalogue Movie : Open Source Project on Github</string>
    <string name="product_name_dictionary_box">Dictionary Box</string>
    <string name="product_name_cleaner">Intelligent Cleaner: Smart Phone Booster, Optimize</string>
    <string name="product_name_piano_k3g">Piano Kabhi Khusi 2020 - Hindi Song</string>
    <string name="product_name_speech_booster">Speech Booster - Learn speech by recording a video</string>

    <string name="product_name_2048_elsa">2048 Elsa - Queen Of Ice</string>
    <string name="product_name_2048_pokeeetmon">2048 Pokeeet Mon - For Fans</string>
    <string name="product_name_intention">Intentions - Piano Cover</string>
    <string name="product_name_hindia">Lagu Offline Hindia Lengkap - (Secukupnya) NKCTHI</string>
    <string name="product_name_praybox">Pray Box - (Jago Sholat)</string>
    <string name="product_name_sticker_wa_pokeeetmon">Sticker WA Pokeet Mon - For Fans</string>
    <string name="product_name_viprox_vpn">Viprox - VPN Quick Connect, FREE UNLIMITED</string>
    <string name="product_name_wallpaper_sw">Please Don\'t Download - So Bored Wallpaper Apps</string>

    <string name="product_name_deknappe">De-Knappe Web</string>
    <string name="product_name_misaiwan">Misaiwan Web</string>
    <string name="product_name_promadika">Promadika Desktop</string>
    <string name="product_name_sinop">Sinop Desktop</string>


    <string name="title_social_media">Social Media</string>
    <string name="title_education">Education</string>
    <string name="title_skill">Skill</string>
    <string name="title_product">Product</string>
    <string name="title_title">Title</string>
    <string name="title_about_us">toolbar_about_us</string>

    <string name="subtitle_subtitle">Subtitle</string>
    <string name="subtitle_social_media">Follow my social media account</string>
    <string name="subtitle_education">My background education</string>
    <string name="subtitle_skill">My professional skill</string>
    <string name="subtitle_product">My list product that I make it</string>

    <string name="text_android">Android</string>
    <string name="title_about_me">About Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product_release">Release</string>
    <string name="title_product_debug">Development</string>
    <string name="title_social_organization">Organization</string>

    <string name="title_org_himadif">HIMADIF TEL-U</string>
    <string name="title_org_uxid">UXID Bandung</string>
    <string name="title_org_ypgeek">Young Probolinggo Geek</string>
    <string name="title_org_protect">PROTECT Community</string>


</resources>
