<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Github   : github.com/amirisback
 * LinkedIn : linkedin.com/in/faisalamircs
 * 
 * FrogoBox Software Industries
 * 
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_medium_8dp"
    android:paddingStart="@dimen/dimen_small_4dp"
    android:paddingTop="@dimen/dimen_medium_8dp"
    android:paddingEnd="@dimen/dimen_small_4dp"
    android:paddingBottom="@dimen/dimen_medium_8dp">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_big_ultra_32dp"
        android:background="@drawable/box_radius"
        android:minWidth="220dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_edu_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_big_16dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="@dimen/dimen_big_16dp"
            android:maxLines="1"
            android:textSize="@dimen/text_size_small_10sp"
            tools:text="@string/text_edu_high_school_level" />

        <TextView
            android:id="@+id/tv_edu_institute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_big_16dp"
            android:layout_marginTop="@dimen/dimen_small_4dp"
            android:layout_marginEnd="@dimen/dimen_big_16dp"
            android:layout_marginBottom="@dimen/dimen_small_4dp"
            android:maxLines="1"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium_16sp"
            tools:text="@string/text_edu_high_school_institute" />

        <TextView
            android:id="@+id/tv_edu_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_big_16dp"
            android:layout_marginEnd="@dimen/dimen_big_16dp"
            android:layout_marginBottom="@dimen/dimen_medium_8dp"
            android:maxLines="1"
            android:textSize="@dimen/text_size_small_10sp"
            tools:text="@string/text_dribbble" />

        <TextView
            android:id="@+id/tv_edu_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_radius_under"
            android:paddingStart="@dimen/dimen_big_16dp"
            android:paddingTop="@dimen/dimen_medium_8dp"
            android:paddingEnd="@dimen/dimen_big_16dp"
            android:paddingBottom="@dimen/dimen_medium_8dp"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/text_size_default_12sp"
            android:textStyle="bold"
            tools:text="@string/text_edu_high_school_year" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_big_16dp"
        android:layout_marginEnd="@dimen/dimen_big_16dp"
        app:cardCornerRadius="@dimen/dimen_medium_8dp"
        app:elevation="@dimen/dimen_medium_8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_big_16dp">

            <ImageView
                android:id="@+id/img_school_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>