<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SkillActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <include layout="@layout/container_title"/>

        <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/dimen_big_16dp"
                android:layout_marginEnd="@dimen/dimen_big_16dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/dimen_medium_8dp"
                android:layout_height="wrap_content">

            <TextView
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_title_medium_20sp"
                    android:textColor="@color/colorTextBlack"
                    android:layout_margin="@dimen/dimen_big_16dp"
                    android:drawableStart="@drawable/ic_product_type_android"
                    android:text="@string/text_android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/dimen_medium_8dp"
                android:layout_marginStart="@dimen/dimen_big_16dp"
                android:layout_marginEnd="@dimen/dimen_big_16dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/dimen_medium_8dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_margin="@dimen/dimen_big_ultra_32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_skill_kotlin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <TextView
                android:text="@string/title_product"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/text_size_title_big_super_30sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dimen_big_16dp"
                android:layout_marginStart="@dimen/dimen_big_16dp"
                android:layout_marginEnd="@dimen/dimen_big_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/subtitle_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_medium_8dp"
                android:layout_marginStart="@dimen/dimen_big_16dp"
                android:layout_marginEnd="@dimen/dimen_big_16dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product"
                tools:listitem="@layout/item_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</ScrollView>