<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Github   : github.com/amirisback
 * LinkedIn : linkedin.com/in/faisalamircs
 * 
 * FrogoBox Software Industries
 * 
 -->

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

        <ImageView
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:src="@drawable/ic_photo_image"
                android:scaleType="centerCrop"
                android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
                android:background="@drawable/box_radius_right"
                android:orientation="vertical"
                android:paddingTop="@dimen/dimen_big_16dp"
                android:paddingStart="@dimen/dimen_big_16dp"
                android:paddingBottom="@dimen/dimen_big_16dp"
                android:paddingEnd="@dimen/dimen_big_ultra_32dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout">

            <TextView
                    android:text="@string/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextWhite"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_job"
                    android:textColor="@color/colorTextWhite"
                    android:text="@string/text_job"
                    android:layout_marginTop="8dp"/>
        </LinearLayout>

        <TextView
                android:text="@string/title_about_me"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/text_size_title_big_super_30sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="@+id/guideline" android:id="@+id/textView"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView" android:layout_marginBottom="16dp"/>

        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                    android:id="@+id/guideline" app:layout_constraintGuide_begin="441dp"
                                                    android:orientation="horizontal"/>

        <HorizontalScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:scrollbars="none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textView"
                android:id="@+id/horizontalScrollView" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/fab_social_media"
                        android:layout_marginStart="@dimen/dimen_big_16dp"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_big_16dp"
                        android:background="@drawable/box_menu_organization"
                        android:minWidth="150dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                    <ImageView
                            android:layout_marginBottom="@dimen/dimen_medium_8dp"
                            android:src="@drawable/ic_nav_organization"
                            android:layout_width="@dimen/dimen_big_ultra_32dp"
                            android:layout_height="@dimen/dimen_big_ultra_32dp"/>

                    <TextView
                            android:text="Social Media"
                            android:textColor="@color/colorTextWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/fab_skill"
                        android:layout_marginStart="@dimen/dimen_big_16dp"
                        android:layout_marginEnd="@dimen/dimen_big_16dp"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_big_16dp"
                        android:background="@drawable/box_menu_skill"
                        android:minWidth="150dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                    <ImageView
                            android:layout_marginBottom="@dimen/dimen_medium_8dp"
                            android:src="@drawable/ic_nav_skill"
                            android:layout_width="@dimen/dimen_big_ultra_32dp"
                            android:layout_height="@dimen/dimen_big_ultra_32dp"/>

                    <TextView
                            android:text="Skill and Product"
                            android:textColor="@color/colorTextWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/fab_certificate"
                        android:layout_marginEnd="@dimen/dimen_big_16dp"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_big_16dp"
                        android:background="@drawable/box_menu_certificate"
                        android:minWidth="150dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                    <ImageView
                            android:layout_marginBottom="@dimen/dimen_medium_8dp"
                            android:src="@drawable/ic_nav_certificate"
                            android:layout_width="@dimen/dimen_big_ultra_32dp"
                            android:layout_height="@dimen/dimen_big_ultra_32dp"/>

                    <TextView
                            android:text="Experience"
                            android:textColor="@color/colorTextWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>


        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>